2005-05-07  Michael Schmitt  <michael.schmitt@teststep.org>

	* ref_inset.C: rename LFUN_REF_GOTO to LFUN_LABEL_GOTO

2005-05-01  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_nestinset.C (getStatus): suppress math/text fonts,
	subscripts etc. to prevent lyx access to latex-illegal stuff
	in text-inside-math (mbox)

2005-04-25  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_gridinset.C (doDispatch):
	* math_hullInset.C (doDispatch):
	* math_nestInset.C (doDispatch): fix handling of alignment

2005-04-11  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_nestinset.C (doDispatch): make insert-around-selection
	of root inset take the base, not the exponent

2005-04-10  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_deliminset.Ci (isParenthesis):
	* math_extern.C: Spelling

2005-04-09  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_gridinset.C (doDispatch):
	* math_nestinset.C (doDispatch): enable HOME/END keys to skip
	out of inset (adding cur.undispatched())

2005-04-09  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_colorinset.C (draw): fix crash and cursor positioning.

2005-04-07  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_nestinset.C (doDispatch): Fix arrow up/down inside
	macro crashing bug (Helge Hafting report)

2005-04-07  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_gridinset.C (getStatus): allow C-Tab to split cell

2005-04-06  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_nestinset.C (doDispatch): fix cursor positioning in
	non-grid nestinsets, and selection enclosure when inserting
	font or deco insets.

2005-04-05  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_amsarrayinset.C:
	* math__arrayinset.C:
	* math_decorationinset.C:
	* math_deliminset.C:
	* math_nestinset.C:
	* math_tabularinset.C: Final touch on various corner marker
	positions and inset clickability in math

2005-04-04  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_splitinset.[Ch]: add draw method calling setPosCache,
	to make split-type insets clickable.
