@@ -136,10 +136,8 @@ bool MathSymbolInset::takesLimits() const
 
 void MathSymbolInset::validate(LaTeXFeatures & features) const
 {
-	if (sym_->inset == "msa" || sym_->inset == "msb")
-		features.require("amssymb");
-	else if (sym_->inset == "wasy")
-		features.require("wasysym");
+	if (!sym_->requires.empty())
+		features.require(sym_->requires);
 }
 
 
